--- a/buger/style/style.css
+++ b/buger/style/style.css
@@ -409,6 +409,18 @@ body {
   height: 100%;
 }
 
+.wrap .mainbox .step1 #mapbox {
+  top: 0;
+  width: 78%;
+  height: 40%;
+  left: 50%;
+  border-radius: 20px;
+  transform: translateX(-55%);
+  -ms-flex-line-pack: center;
+      align-content: center;
+  z-index: 0;
+}
+
 .step2 {
   position: absolute;
   left: 25%;
